3rd Commit, Table grows. Work on stubborn column.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,23 @@
+#FrequencyTable{
+    overflow: scroll;
+    overflow-y: scroll;
+}
+
 .FrequencyHeader{
     text-align: center;
 }
+
+
+/* .RowOfTable{
+    height: 100px
+} */ /*This just makes a first row however many pixels tall bcus RowOfTable is a <tr>*/
+
+.frequencyRows{
+   height: 800px;
+   overflow-y: auto;
+   overflow-x: hidden;
+}
+.ThreeIP-TableHeader{
+    display:flex;
+}
+
