--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -294,50 +294,52 @@
 </style>
 
 <!-- Toolbar -->
-<div class="container-fluid" role="">
+<div class="container-fluid" style="height:500px; overflow-y: clip" role="">
   <h1>Bla!!!</h1>
+  <button (click)="toggle()" type="button" class="btn btn-primary ThreeIP-PingToggle">Toggle Ping</button>
   <table >
     <!--ThreeIP-TableHeader is d-flex in the .css file-->
     <thead class = "row">
       <tr >
         <!--d-flex does default stretch behavior and w-100 isn't needed here but full width redundancy-->
-        <td scope="row" colspan="4" class="FrequencyHeader d-flex"> <!-- removed w-100 for now-->
+        <td scope="row" colspan="4" class="FrequencyHeader d-flex">
           <form>
             <label for="FrequencyInput">Frequency (in seconds): </label>
             <input type="number" id="FrequencyInput">
           </form>
         </td>
       </tr>
-      </thead>
-      </table>
-
-      <table class="table table-hover table-bordered d-flex flex-column vh-100" id="FrequencyTable">
-        <thead>
-          <tr class="d-flex">
-            <!-- <th scope="col" class="w-10">#</th> -->
-            <!--The flex-grow-1 addresses the columns not filling the horizontal space but doesn't "fix"
-              the widths of "RowOfTable" items not being fixed to header column width, ask if that
-              is considered a good fix or a lazy fix-->
-            <th scope="col" class="flex-grow-1">Date & Time</th>
-            <th scope="col" class="flex-grow-1">Google Frequency</th>
-            <th scope="col" class="flex-grow-1">Router Frequency</th>
-            <th scope="col" class="flex-grow-1">Server Frequency</th>
-          </tr>
-        </thead>
-        <tbody class="FrequencyRows border">
-          <!-- each row is a <tr> -->
-          <!--going to make a tr component or functionality to add returned frequencies-->
-          <!--first make a while list to add new <tr>s -->
-          
-          <!-- <tr class="RowOfTable">
-            <td class="flex-grow-1"></td>
-            <td class="flex-grow-1"></td>
-            <td class="flex-grow-1"></td>
-            <td class="flex-grow-1"></td>
-          </tr> -->
-          
-        </tbody>
+    </thead>
   </table>
+
+
+    <table class="table table-hover table-bordered d-flex flex-column " id="FrequencyTable">
+      <thead>
+        <tr class="d-flex">
+          <!-- <th scope="col" class="w-10">#</th> -->
+          <!--The flex-grow-1 addresses the columns not filling the horizontal space but doesn't "fix"
+            the widths of "RowOfTable" items not being fixed to header column width, ask if that
+            is considered a good fix or a lazy fix-->
+          <th scope="col" class="flex-grow-1">Date & Time</th>
+          <th scope="col" class="flex-grow-1">Google Frequency</th>
+          <th scope="col" class="flex-grow-1">Router Frequency</th>
+          <th scope="col" class="flex-grow-1">Server Frequency</th>
+        </tr>
+      </thead>
+      <!-- <tbody class="FrequencyRows border"> -->
+        <!-- each row is a <tr> -->
+        <!-- going to make a tr component or functionality to add returned frequencies -->
+        <!-- first make a while list to add new <tr>s -->
+        
+        <!-- <tr class="RowOfTable">
+          <td class="flex-grow-1"></td>
+          <td class="flex-grow-1"></td>
+          <td class="flex-grow-1"></td>
+          <td class="flex-grow-1"></td>
+        </tr> -->
+        
+      <!-- </tbody> -->
+    </table>
 </div>
 
 <script>
